--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^2.0",
+        "google/recaptcha": "^1.3",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^3.3",
         "jason-guru/laravel-make-repository": "^0.0.3",
@@ -14,7 +15,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.4",
-        "laravelcollective/html": "^6.4"
+        "laravelcollective/html": "^6.4",
+        "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
